--- a/compute_stats.ipynb
+++ b/compute_stats.ipynb
@@ -7,8 +7,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import argparse"
+    "import matplotlib.pyplot as plt\n"
    ]
   },
   {
